# AD---Attack-Defense-Simulation

./: .gitignore  .tmp.golden_ticket_Administrator_20260711_070443.ccache.ccache  .tmp.golden_ticket_Administrator_20260711_070817.ccache.ccache  .tmp.golden_ticket_Administrator_20260711_070828.ccache.ccache  Administrator.ccache  README.md  RED_TEAM_ENRICHMENT_GUIDE.md  TIER1-SUMMARY.md  TIER2-SUMMARY.md  cli.py  config.yaml  config.yaml.example  dashboard.py  golden_ticket_Administrator_20260711_071033.ccache  golden_ticket_Administrator_20260711_071540.ccache  golden_ticket_Administrator_20260711_071849.ccache  golden_ticket_Administrator_20260711_100235.ccache  golden_ticket_Administrator_20260712_002457.ccache  pyproject.toml  validate_red_team_enrichment.py
ad-attack-defense/: cli.py  config.yaml  pyproject.toml
ad-attack-defense/core/: executor.py  loader.py  logger.py  pdf_report.py  report_generator.py  wazuh_api.py
ad-attack-defense/modules/blue_team/: audit_gpo.py  audit_logs.py  audit_network.py  audit_passwords.py  audit_privileges.py
ad-attack-defense/modules/purple_team/: correlate_attack.py  fetch_wazuh_alerts.py  validate_detection.py
ad-attack-defense/modules/red_team/: kerberoasting.py  lateral_mouvement.py  llmnr_poisoning.py  password_spray.py  pth.py
ad-attack-defense/modules/response/: block_ip.py  disable_user.py  isolate_host.py  reset_password.py
ad-attack-defense/playbooks/blue_team/: audit_basic.yaml
ad-attack-defense/playbooks/purple_team/: detection_validation.yaml
ad-attack-defense/playbooks/red_team/: full_attack.yaml
ad-attack-defense/utils/: format_utils.py
core/: config.py  database.py  executor.py  loader.py  logger.py  report_generator.py  ssh_tunnel.py  wazuh_api.py
modules/blue_team/: audit_gpo.py  audit_logs.py  audit_network.py  audit_passwords.py  audit_privileges.py
modules/purple_team/: correlate_attack.py  fetch_wazuh_alerts.py  validate_detection.py
modules/red_team/: asrep_roasting.py  dcsync.py  golden_ticket.py  kerberoasting.py  lateral_mouvement.py  llmnr_poisoning.py  password_spray.py  pth.py
modules/response/: block_ip.py  disable_user.py  isolate_host.py  reset_password.py
modules/response/linux/: block_ip.py  disable_user.py  isolate_host.py  reset_password.py
playbooks/: hardening.yml
playbooks/blue_team/: audit_advanced.yaml
playbooks/purple_team/: full_purple_chain.yaml
playbooks/wordlists/: passwords.txt  users.txt
reports/: attacks.db
tests/: test_core.py  test_modules.py
utils/: format_utils.py
