[project]
name = "ad-attack-defense"
version = "0.1.0"
description = "Active Directory Attacks & Defense Simulation Framework"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "NISSEKONG Georges Owen" },
    { name = "DIOP Salla" },
]
license = { text = "MIT" }
keywords = ["active-directory", "pentest", "blue-team", "red-team", "siem", "wazuh"]

# ── Runtime dependencies ───────────────────────────────────────────────────────
# Only real external packages — everything else is Python stdlib
dependencies = [
    "pyyaml>=6.0",           # YAML config + playbook parsing
    "impacket>=0.12.0",      # Kerberoasting, PtH, secretsdump, PsExec
    "requests>=2.31.0",      # HTTP calls (optional Wazuh API fallback)
    "urllib3>=2.0.0",        # Used by requests + direct API calls
    "reportlab>=4.0",        # PDF report generation (report_generator.py)
    "pdfplumber>=0.11",      # PDF text preview in the CLI reports menu
    "streamlit>=1.28",       # Interactive web dashboard
    "plotly>=5.18",          # Interactive charts for dashboard
    "pandas>=2.0",           # Data manipulation for dashboard
]

# ── Optional / dev dependencies ───────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.0",           # Unit testing
    "pytest-cov>=5.0",       # Code coverage reports
    "ruff>=0.4.0",           # Fast linter + formatter (replaces flake8 + black)
]

# ── CLI entry point ────────────────────────────────────────────────────────────
# Allows running the framework as: ad-attack-defense --mode blue
[project.scripts]
ad-attack-defense = "cli:main"

# ── Tool configuration ─────────────────────────────────────────────────────────
[tool.poetry]
packages = [
    { include = "cli.py" },
    { include = "core" },
    { include = "modules" },
    { include = "utils" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest     = ">=8.0"
pytest-cov = ">=5.0"
ruff       = ">=0.4.0"

# ── Ruff linter config ─────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle + pyflakes + isort
ignore = ["E501"]               # Line too long — handled by formatter

# ── Pytest config ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts      = "-v --tb=short"

# ── Build system ───────────────────────────────────────────────────────────────
[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
